# TradeTide

./: .buildinfo  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.rst  code.html  data.json  development.py  endpoint.json  genindex.html  index.html  interactive_plot.py  meta.yaml  notebook.ipynb  objects.inv  plottings_examples.py  pyproject.toml  references.html  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  theory.html  version_switcher.json
.doctrees/: code.doctree  environment.pickle  index.doctree  sg_execution_times.doctree  theory.doctree
.doctrees/gallery/: index.doctree  plot_BB.doctree  plot_MACD.doctree  plot_RMI.doctree  plot_RSI.doctree  plot_SMA.doctree  plot_strategy.doctree  sg_execution_times.doctree
.github/: copilot-instructions.md
.github/workflows/: deploy_PyPi.yml  deploy_anaconda.yml  deploy_documentation.yml  deploy_workflow.yml
TradeTide/: __init__.py  _version.py  backtester.py  capital_management.py  capital_managment.py  directories.py  loader.py  market.py  metrics.py  plottings.py  portfolio.py  position.py  position_collection.py  risk_management.py  simulation_settings.py  strategy.py  time_state.py  times.py  tools.py
TradeTide/binary/: __init__.py
TradeTide/cpp/: interface.cpp  main  main.cpp  market.cpp  portfolio.cpp  position.cpp  risk_managment.cpp  signal  signal.cpp  testing  testing.cpp
TradeTide/cpp/capital_management/: CMakeLists.txt  capital_management.cpp  capital_management.h  interface.cpp
TradeTide/cpp/indicators/: CMakeLists.txt  interface.cpp
TradeTide/cpp/indicators/base_indicator/: CMakeLists.txt  base_indicator.cpp  base_indicator.h  interface.cpp
TradeTide/cpp/indicators/bollinger_bands/: CMakeLists.txt  bollinger_bands.cpp  bollinger_bands.h  interface.cpp
TradeTide/cpp/indicators/moving_average_crossings/: CMakeLists.txt  interface.cpp  moving_average_crossings.cpp  moving_average_crossings.h
TradeTide/cpp/indicators/relative_momentum_index/: CMakeLists.txt  interface.cpp  relative_momentum_index.cpp  relative_momentum_index.h
TradeTide/cpp/position/: CMakeLists.txt  interface.cpp  position.cpp  position.h
TradeTide/cpp/position_collection/: CMakeLists.txt  interface.cpp  position_collection.cpp  position_collection.h
TradeTide/deprecated/: capital_management.py  metrics.py  position_.py  time_state.py  utils.h
TradeTide/indicators/: __init__.py  average_true_range.py  base.py  base_indicator.py  bollinger_bands.py  custom.py  mac.py  moving_average_convergence_divergence.py  moving_average_crossing.py  moving_average_crossings.py  random.py  relative_momentum_index.py  relative_strength_index.py  stochastic_relative_strength_index.py
TradeTide/indicators_/: __init__.py  base.py  moving_average_crossings.py
TradeTide/strategy/: __init__.py  base_strategy.py  bollinger_bands.py  custom.py  moving_average_crossing.py  random.py  relative_strength_index.py
_sources/: sg_execution_times.rst.txt
_sources/gallery/: index.rst.txt
development/: dev_0 copy.py  dev_0.py  dev_1.py
developments/: cpp_wip.py  dev_0.py  dev_1.py  dev_2.py
docs/0.0.0.0/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/examples/: backtester.py  bollinger_bands.py  example_0.py  example_BB.py  example_MACD.py  example_RMI.py  example_RSI.py  example_SMA.py  example_combination.py  example_strategy.py  moving_average_crossings.py  relative_momentum_index.py  workflow.py
docs/latest/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/source/: conf.py  sg_execution_times.rst  theory.rst
docs/v0.1.2/: code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.1.3/: index.html  references.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.1.4/: code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.1.5/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  (+1 more)
gallery/: index.html  plot_BB.html  plot_MACD.html  plot_RMI.html  plot_RSI.html  plot_SMA.html  plot_strategy.html  sg_execution_times.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_4c84c18d1cc97980_atr_py.html  z_4c84c18d1cc97980_base_indicator_py.html  z_4c84c18d1cc97980_base_py.html  z_4c84c18d1cc97980_bb_py.html  z_4c84c18d1cc97980_bollinger_bands_py.html  z_4c84c18d1cc97980_custom_py.html  z_4c84c18d1cc97980_mac_py.html  z_4c84c18d1cc97980_macd_py.html  z_4c84c18d1cc97980_moving_average_crossings_py.html  z_4c84c18d1cc97980_random_py.html  z_4c84c18d1cc97980_relative_momentum_index_py.html  z_4c84c18d1cc97980_rmi_py.html  z_4c84c18d1cc97980_rsi_py.html  z_4c84c18d1cc97980_srsi_py.html  z_b9659dc163debb8b_backtester_py.html  z_b9659dc163debb8b_capital_management_py.html  z_b9659dc163debb8b_currencies_py.html  z_b9659dc163debb8b_loader_py.html  z_b9659dc163debb8b_market_py.html  z_b9659dc163debb8b_metrics_py.html  z_b9659dc163debb8b_plottings_py.html  z_b9659dc163debb8b_portfolio_py.html  z_b9659dc163debb8b_position_collection_py.html  z_b9659dc163debb8b_position_py.html  z_b9659dc163debb8b_risk_management_py.html  z_b9659dc163debb8b_signal_py.html  z_b9659dc163debb8b_simulation_settings_py.html  z_b9659dc163debb8b_strategy_py.html  z_b9659dc163debb8b_time_state_py.html  z_b9659dc163debb8b_times_py.html  z_b9659dc163debb8b_tools_py.html  z_b9659dc163debb8b_utils_py.html  z_f49dfd0a7c0cfbd3_utils_py.html
tests/: bollinger_bands.py  loaders.py  moving_average_crossing.py  test_backtester.py  test_bollinger_bands.py  test_currencies.py  test_edge_cases.py  test_loaders.py  test_moving_average_crossing.py  test_portfolio.py  test_relative_momentum_index.py  test_signal.py  test_strategies.py  test_tools.py
(+571 files in other folders)
