[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "INFO"
wheel.exclude = ["TradeTide/cpp"]
install.strip = false
sdist.include = ["TradeTide/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[tool.setuptools_scm]
write_to = "TradeTide/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project]
name = "TradeTide"
dynamic = ["version"]
description = "A package for stocks market backtesting."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.10"
authors = [{name="Martin Poinsinet de Sivry-Houle", email="martin.poinsinet.de.sivry@gmail.com"}]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 4 - Beta',
]

keywords = ["backtesting", "stocks", "market"]

dependencies = [
    "pydantic>=2.6.3",
    "MPSPlots",
    "tabulate",
    "pandas",
    "GitPython",
    "numpy",
    "matplotlib",
    "mpl-interactions"
]


[tool.setuptools]
packages = ["TradeTide"]


[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "flake8>=3.9",
    "coverage==7.6.9"
]

documentation = [
    "numpydoc==1.8.0",
    "sphinx>=5.1.1",
    "sphinx-gallery==0.18.0",
    "pydata-sphinx-theme==0.16.0",
    "sphinx-rtd-theme==3.0.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "INFO"
testpaths = [
    "tests/*",
]
addopts = [
    '-v',
    '-rA',
    '-rw',
    '--cov=TradeTide',
    '--cov-report=html'
]

[tool.coverage.run]
source = ['SuPyMode']
omit = [
    '*\__init__.py',
    '*/_version.py',
    '*/directories.py',
]
branch = true
relative_files = true