[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = ".skbuild/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "INFO"
wheel.exclude = ["TradeTide/cpp"]
install.strip = false
sdist.include = ["TradeTide/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[tool.setuptools_scm]
write_to = "TradeTide/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project]
name = "TradeTide"
dynamic = ["version"]
description = "A package for stocks market backtesting."
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.10"
authors = [{name="Martin Poinsinet de Sivry-Houle", email="martin.poinsinet.de.sivry@gmail.com"}]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Development Status :: 4 - Beta',
]

keywords = ["backtesting", "stocks", "market"]

dependencies = [
    "pydantic>=2.6.3",
    "MPSPlots",
    "tabulate",
    "pandas",
    "GitPython",
    "numpy",
    "matplotlib",
    "mpl-interactions"
]


[tool.setuptools]
packages = ["TradeTide"]


[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "flake8>=3.9",
    "coverage==7.10.7"
]

documentation = [
    "numpydoc==1.9.0",
    "sphinx>=5.1.1",
    "sphinx-gallery==0.20.0",
    "pydata-sphinx-theme==0.16.1",
    "sphinx-rtd-theme==3.0.2",
]

dev = [
    "flake==7.2.0",
]

[tool.cibuildwheel]
build-frontend = "build"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp311-manylinux*", "cp312-manylinux*", "cp313-manylinux*"]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-test = ""
test-command = "cd {project}; python -m pytest --config-file=pytest.ini"

[tool.cibuildwheel.macos]
archs = ["arm64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"  # --exclude=libomp.dylib
test-command = 'cd {project}; python -m pytest --config-file=pytest.ini'  # DYLD_PRINT_LIBRARIES=NO

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
test-command = 'cd /d {project} && python -m pytest --config-file=pytest.ini'
