[metadata]
name = TradeTide
description = A package finit-difference matrix generation.
version = file: TradeTide/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/TradeTide
license = MIT
license_file = LICENSE
readme = README.rst
Documentation = https://tradetide.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
include_package_data = True
packages = find:
python_requires >= 3.11
install_requires =
    numpy
    matplotlib
    trading-ig
    gitpython

setup_requires =
    setuptools>=40.6.0
    wheel


[options.extras_require]
development =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery>=0.11.1
    sphinx-rtd-theme>=1.0.0
    docutils==0.20.1
    pydata-sphinx-theme

    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report
    coverage

documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery>=0.11.1
    sphinx-rtd-theme>=1.0.0
    docutils==0.20.1
    pydata-sphinx-theme

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report
    coverage


[options.packages.find]
exclude =
    extern
    docs
    tests

[coverage:run]
source = TradeTide

[sdist]
formats = zip, gztar
